# seminar-2022-summary-model

./: .gitignore  README.md  create_data.ipynb  createdatacsv.ipynb  demo.py  outputs.py  pyproject.toml  test_trainmodel.ipynb  train.ipynb
train/ex_2/: train.ipynb
